proposal can be sent with a reason coming from the requester of the permissions
